# justbaked

./: .gitmodules  README.md  TestPush
Pictures/Jackson/: RVIZSim.webm
RecordKeepingPictures/Chase/: filler.txt
justbaked/: frames_2025-03-18_23.10.35.gv  frames_2025-03-20_15.05.14.gv  frames_2025-03-20_16.30.26.gv  nohup.out
justbaked/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
justbaked/install/RPLidar/share/RPLidar/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
justbaked/install/gazebo/share/gazebo/: local_setup.sh  package.sh
justbaked/install/robdesc/share/robdesc/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
justbaked/install/robot_bringup/lib/robot_bringup/: button_publisher.py  cat_servo_fire.py  cat_servo_gpiofire.py  cat_servo_gpiozero.py  catapult_launch.py  determine_fire_location  waypoint_nav_cpp
justbaked/install/robot_bringup/share/robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
justbaked/install/ros_gz_interfaces/share/ros_gz_interfaces/: local_setup.sh  package.sh
justbaked/install/ros_gz_sim/lib/ros_gz_sim/: gzserver  remove  test_create  test_remove  test_stopwatch
justbaked/install/ros_gz_sim/share/ros_gz_sim/: package.dsv  package.ps1  package.sh
justbaked/install/slam/share/slam/: local_setup.sh  package.sh
justbaked/install/sllidar_ros2/lib/sllidar_ros2/: sllidar_node
justbaked/log/: latest_build
justbaked/src/control/: package.xml
justbaked/src/gazebo/: CMakeLists.txt  package.xml
justbaked/src/gazebo/config/: slam_toolbox_params.yaml
justbaked/src/gazebo/launch/: spawn_robot.launch.py  world.launch.py
justbaked/src/gazebo/worlds/: firearena.sdf
justbaked/src/robdesc/: CMakeLists.txt  package.xml
justbaked/src/robdesc/config/: diff_drive.yaml  diff_drive_controller.yaml
justbaked/src/robdesc/description/: mobile.gazebo  robot.sdf  robot.urdf  robot.urdf.xacro  robotcore.xacro
justbaked/src/robdesc/launch/: rsp.launch.py
justbaked/src/robdesc/worlds/: firearena.world
justbaked/src/robot_bringup/: CMakeLists.txt  package.xml  setup.py
justbaked/src/robot_bringup/catapult/: cat_servo.py  cat_servo_fire.py  cat_servo_gpiofire.py  cat_servo_gpiozero.py  catapult_launch.cpp  catapult_launch.py
justbaked/src/robot_bringup/launch/: button_publisher.py  round_launcher.py  roundone.launch.py  roundthree.launch.py  roundtwo.launch.py  startup.launch.py
justbaked/src/robot_bringup/maps/: .pgm  .yaml  arena_map.pgm  arena_map.yaml
justbaked/src/robot_bringup/rounds/: button_publisher.py  roundtwo.launch.py
justbaked/src/robot_bringup/src/: catapult_launch.py  determine_fire_location.cpp  tank_drive.launch.py  waypoint_nav.cpp
justbaked/src/robot_bringup/waypoints/: .round1.yaml.swp  round1.yaml  round2.yaml  round3.yaml  rvizpoints.yaml
justbaked/src/rplidar/: CMakeLists.txt  package.xml
justbaked/src/slam/: package.xml
justbaked/src/sllidar_ros2/: CMakeLists.txt
justbaked/src/sllidar_ros2/install/: local_setup.sh  setup.sh
justbaked/src/sllidar_ros2/launch/: sllidar_a1_launch.py
justbaked/src/sllidar_ros2/log/: latest_build
justbaked/src/sllidar_ros2/sllidar_ros2/: CMakeLists.txt
justbaked/src/sllidar_ros2/src/: sllidar_node.cpp
justbaked/src/temp_sens/: CMakeLists.txt  package.xml  setup.cfg  setup.py
justbaked/src/temp_sens/temp_sens/: mlx90614_node.py
justbaked/src/temp_sens/test/: test_mlx90614.py
justbaked/src/tempsens/: CMakeLists.txt
justbaked/src/tempsense/: CMakeLists.txt  package.xml
justbaked/src/trackRobot/: CMakeLists.txt  package.xml
justbaked/src/trackrobot/: setup.cfg  setup.py
justbaked/src/trackrobot/urdf/: robdesc.urdf.xacro
justbaked/src/turtlebot4_description/: CMakeLists.txt  robdesc.rviz
justbaked/src/turtlebot4_navigation/: CMakeLists.txt
justbaked/src/turtlebot4_navigation/config/: .nav2.yaml.swp  .slam.yaml.swp  localization.yaml  nav2.yaml  navigate_to_pose_with_recovery.xml  slam.yaml
justbaked/src/turtlebot4_navigation/launch/: localization.launch.py  slam.launch.py  startup.launch.py  tank_mov.launch.py
justbaked/src/turtlebot4_navigation/turtlebot4_navigation/: TankDemo.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/News/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_pubsub/src/: .publisher_lambda_function.cpp.swp
ros2_ws/src/my_package/: .package.xml.swp  package.xml
ros_wspi/: file.txt
ws_lidar/install/: local_setup.sh  setup.sh
ws_lidar/log/: latest_build
(+250 files in other folders)
