<?xml version="1.0"?>
<package format="3">
  <name>temp_sens</name>
  <version>0.0.1</version>
  <description>ROS 2 package for reading temperature from MLX90614 sensor</description>
  <maintainer email="jackson.galloway02@gmail.com">Jackson Galloway</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>python3-pyserial</depend>  <!-- Add this for the 'serial' module -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
